fix(firefox) "grabbing" cursor is not working on firefox.

--- a/src/app/app.component.less
+++ b/src/app/app.component.less
@@ -144,4 +144,9 @@ svg {
   background: @background url("../assets/images/wood/Melamine-wood-006.png") 0 0 repeat;
 }
 
+.grabbing {
+  cursor: -webkit-grabbing;
+  cursor: -moz-grabbing;
+}
+
 
